# bcc32.com

./: .gitignore  CHANGES.md  Makefile  README.md  bcc32-com.opam  dune-project
client/: action.ml  app.ml  app.mli  dune  jbuild  main.ml  model.ml  model.mli  state.ml  state.mli
common/: jbuild
html/: dune  index.html  jbuild
lib/protocol/: dune  jbuild  message.ml  message.mli  message_request.ml  message_request.mli  protocol.ml  protocol.mli
lib/rpc_ws_transport/: dune  jbuild  rpc_ws_transport.ml  rpc_ws_transport.mli
public/: dune  jbuild
server/: dune  jbuild  main.ml  messages.ml  messages.mli  state.ml  state.mli  websocket_rpc_server.ml  websocket_rpc_server.mli
test/: dune  jbuild  test_tcp.ml  test_upstream_websocket.ml  test_websocket_rpc.ml
