opam-version: "2.0"
maintainer: "webmaster@bcc32.com"
authors: ["Aaron L. Zeng"]
homepage: "https://github.com/bcc32/bcc32-com"
bug-reports: "https://github.com/bcc32/bcc32-com/issues"
dev-repo: "git+https://github.com/bcc32/bcc32-com.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune"              {build & >= "2.0"}
  "async"             {>= "v0.12.0" & < "v0.13.0"}
  "async_js"          {>= "v0.12.0" & < "v0.13.0"}
  "core"              {>= "v0.12.0" & < "v0.13.0"}
  "incr_dom"          {>= "v0.12.0" & < "v0.13.0"}
  "incr_dom_keyboard" {>= "v0.12.0" & < "v0.13.0"}
  "ppx_jane"          {>= "v0.12.0" & < "v0.13.0"}
  "js_of_ocaml"
  "websocket"         {>= "2.13" & < "2.14"}
  "websocket-async"   {>= "2.13" & < "2.14"}
]
